--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,9 @@
 TODO
 
+
+- tool to list iigs/mac resource fork (rlist)
+
+
 1. scan file for debug names (starting at 4e56 - link a6), load into environment table (with tools)
 2. address break, ^C break, etc - list reason *before* disasm line
 4. ; commands - keep track of last address (;l to repeat...)
@@ -46,6 +50,8 @@ CLibraries=$MPW:Libraries:CLibraries-$MPWVersion:
 
 Done
 ----
+- set the time global @ start up (Pascal res files)
+
 - rbreak/wbreak/rwbreak - break on memory access
 - orca/c : symfile support.
 
