update change log for version 0.7.2

--- a/CHANGELOG.text
+++ b/CHANGELOG.text
@@ -1,3 +1,7 @@
+------------------------
+0.7.1 - October 30, 2013
+------------------------
+
 * FCONVERT/Comp support
 - FX2C and FC2X are now supported
 - cciigs now supports the comp data type.
