--- a/README.text
+++ b/README.text
@@ -86,7 +86,7 @@ or create a shell script (in /usr/local/bin, etc)
 
 #!/bin/sh
 
-exec mpw AsmIIgs $@
+exec mpw AsmIIgs "$@"
 
 mpw looks in the current directory and then in the $MPW:Tools: directory
 for the command to run.  The MPW $Commands variable is not yet supported.
